--- a/index.html
+++ b/index.html
@@ -18,11 +18,40 @@
 
 </head>
 <body class="site">
-  <div class="header flex"></div>
-  <div class="nav flex"></div>
-  <div class="sidebar-left flex"></div>
-  <div class="intro flex"></div>
+  <div class="header flex-column">
+    <h1>Welcome to <span id="clickable">MEJO 487</span></h1>
+    <img id="scott" class="hidden" src="img/scott.jpg" alt="A picture of Scott Geier" />
+  </div>
+  <div class="nav flex">
+    <div class="about">
+      About
+    </div>
+    <div class="contact">
+      Contact
+    </div>
+    <div class="social">
+      Social Media
+    </div>
+    <div class="login">
+      Log In
+    </div>
+  </div>
+  <div class="sidebar-left flex-column">
+    <h2>Springfield High School 2018 Girls Basketball Team</h2>
+  <table id="table-content">
+    <!--YOUR HTML CONTENT WILL GO IN HERE--->
+  </table>
+  <div id="all-star"></div>
+  </div>
+  <div class="intro flex">
+    <div id="results"></div>
+  </div>
   <div class="footer flex"></div>
 
+  <!--links to jQuery-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+
+  <!--my scripts-->
+  <script src="js/scripts.js"></script>
 </body>
 </html>
