--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   <div id="all-star"></div>
   </div>
   <div class="intro flex">
+    <div id="tooltip" class="hidden">
+      <p>These are some of the greatest journalists from the 20th century</p>
+    </div>
     <div id="results"></div>
   </div>
   <div class="footer flex"></div>
